grammar-ouput/grammar/CWScriptParser.py
# Generated from grammar/CWScript.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CWScriptParser ( Parser ):

    grammarFileName = "CWScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "'::'", "':'", "'=='", 
                     "'!='", "'='", "'.'", "'?'", "'!'", "'\"'", "'''", 
                     "'`'", "'$'", "'->'", "'??'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'>'", "'contract'", "'log'", 
                     "'instantiate'", "'migrate'", "'exec'", "'query'", 
                     "'let'", "'if'", "'is'", "'else'", "'return'", "'state'", 
                     "'fail'", "'fn'", "'send'", "'reply'", "'on'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "D_COLON", 
                      "COLON", "EQ_EQ", "NEQ", "EQ", "DOT", "QUESTION", 
                      "BANG", "D_QUOTE", "QUOTE", "BACKTICK", "DOLLAR", 
                      "ARROW", "D_QUE", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "LT", "GT", "CONTRACT", "LOG", "INSTANTIATE", 
                      "MIGRATE", "EXEC", "QUERY", "LET", "IF", "IS", "ELSE", 
                      "RETURN", "STATE", "FAIL", "FN", "SEND", "REPLY", 
                      "ON", "NumLiteral", "StrLiteral", "Ident" ]

    RULE_program = 0
    RULE_topLevelStmt = 1
    RULE_contractDefn = 2
    RULE_contractItem = 3
    RULE_reservedKeyword = 4
    RULE_ident = 5
    RULE_stateBlock = 6
    RULE_stateItem = 7
    RULE_itemDefn = 8
    RULE_mapDefn = 9
    RULE_typeExpr = 10
    RULE_instantiateDefn = 11
    RULE_migrateDefn = 12
    RULE_fnParams = 13
    RULE_fnBody = 14
    RULE_paramDefn = 15
    RULE_fnDefn = 16
    RULE_stmt = 17
    RULE_ifStmt = 18
    RULE_assnStmt = 19
    RULE_letStmt = 20
    RULE_returnStmt = 21
    RULE_failStmt = 22
    RULE_logStmt = 23
    RULE_sendStmt = 24
    RULE_fnArgs = 25
    RULE_expr = 26
    RULE_structMember = 27
    RULE_execDefn = 28
    RULE_queryDefn = 29
    RULE_block = 30

    ruleNames =  [ "program", "topLevelStmt", "contractDefn", "contractItem", 
                   "reservedKeyword", "ident", "stateBlock", "stateItem", 
                   "itemDefn", "mapDefn", "typeExpr", "instantiateDefn", 
                   "migrateDefn", "fnParams", "fnBody", "paramDefn", "fnDefn", 
                   "stmt", "ifStmt", "assnStmt", "letStmt", "returnStmt", 
                   "failStmt", "logStmt", "sendStmt", "fnArgs", "expr", 
                   "structMember", "execDefn", "queryDefn", "block" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    LPAREN=3
    RPAREN=4
    LBRACE=5
    RBRACE=6
    LBRACK=7
    RBRACK=8
    COMMA=9
    D_COLON=10
    COLON=11
    EQ_EQ=12
    NEQ=13
    EQ=14
    DOT=15
    QUESTION=16
    BANG=17
    D_QUOTE=18
    QUOTE=19
    BACKTICK=20
    DOLLAR=21
    ARROW=22
    D_QUE=23
    PLUS=24
    MINUS=25
    MULT=26
    DIV=27
    MOD=28
    LT=29
    GT=30
    CONTRACT=31
    LOG=32
    INSTANTIATE=33
    MIGRATE=34
    EXEC=35
    QUERY=36
    LET=37
    IF=38
    IS=39
    ELSE=40
    RETURN=41
    STATE=42
    FAIL=43
    FN=44
    SEND=45
    REPLY=46
    ON=47
    NumLiteral=48
    StrLiteral=49
    Ident=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CWScriptParser.EOF, 0)

        def topLevelStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.TopLevelStmtContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.TopLevelStmtContext,i)


        def getRuleIndex(self):
            return CWScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CWScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 62
                self.topLevelStmt()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(CWScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contractDefn(self):
            return self.getTypedRuleContext(CWScriptParser.ContractDefnContext,0)


        def getRuleIndex(self):
            return CWScriptParser.RULE_topLevelStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelStmt" ):
                listener.enterTopLevelStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelStmt" ):
                listener.exitTopLevelStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelStmt" ):
                return visitor.visitTopLevelStmt(self)
            else:
                return visitor.visitChildren(self)




    def topLevelStmt(self):

        localctx = CWScriptParser.TopLevelStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.contractDefn()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractDefnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # IdentContext

        def CONTRACT(self):
            return self.getToken(CWScriptParser.CONTRACT, 0)

        def LBRACE(self):
            return self.getToken(CWScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CWScriptParser.RBRACE, 0)

        def ident(self):
            return self.getTypedRuleContext(CWScriptParser.IdentContext,0)


        def contractItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.ContractItemContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.ContractItemContext,i)


        def getRuleIndex(self):
            return CWScriptParser.RULE_contractDefn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractDefn" ):
                listener.enterContractDefn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractDefn" ):
                listener.exitContractDefn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractDefn" ):
                return visitor.visitContractDefn(self)
            else:
                return visitor.visitChildren(self)




    def contractDefn(self):

        localctx = CWScriptParser.ContractDefnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_contractDefn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(CWScriptParser.CONTRACT)
            self.state = 73
            localctx.name = self.ident()
            self.state = 74
            self.match(CWScriptParser.LBRACE)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22119081574400) != 0):
                self.state = 75
                self.contractItem()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(CWScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateBlock(self):
            return self.getTypedRuleContext(CWScriptParser.StateBlockContext,0)


        def instantiateDefn(self):
            return self.getTypedRuleContext(CWScriptParser.InstantiateDefnContext,0)


        def execDefn(self):
            return self.getTypedRuleContext(CWScriptParser.ExecDefnContext,0)


        def queryDefn(self):
            return self.getTypedRuleContext(CWScriptParser.QueryDefnContext,0)


        def fnDefn(self):
            return self.getTypedRuleContext(CWScriptParser.FnDefnContext,0)


        def migrateDefn(self):
            return self.getTypedRuleContext(CWScriptParser.MigrateDefnContext,0)


        def getRuleIndex(self):
            return CWScriptParser.RULE_contractItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractItem" ):
                listener.enterContractItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractItem" ):
                listener.exitContractItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractItem" ):
                return visitor.visitContractItem(self)
            else:
                return visitor.visitChildren(self)




    def contractItem(self):

        localctx = CWScriptParser.ContractItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_contractItem)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.stateBlock()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.instantiateDefn()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.execDefn()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.queryDefn()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.fnDefn()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.migrateDefn()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReservedKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTRACT(self):
            return self.getToken(CWScriptParser.CONTRACT, 0)

        def LOG(self):
            return self.getToken(CWScriptParser.LOG, 0)

        def INSTANTIATE(self):
            return self.getToken(CWScriptParser.INSTANTIATE, 0)

        def EXEC(self):
            return self.getToken(CWScriptParser.EXEC, 0)

        def QUERY(self):
            return self.getToken(CWScriptParser.QUERY, 0)

        def LET(self):
            return self.getToken(CWScriptParser.LET, 0)

        def IF(self):
            return self.getToken(CWScriptParser.IF, 0)

        def IS(self):
            return self.getToken(CWScriptParser.IS, 0)

        def ELSE(self):
            return self.getToken(CWScriptParser.ELSE, 0)

        def RETURN(self):
            return self.getToken(CWScriptParser.RETURN, 0)

        def STATE(self):
            return self.getToken(CWScriptParser.STATE, 0)

        def FN(self):
            return self.getToken(CWScriptParser.FN, 0)

        def getRuleIndex(self):
            return CWScriptParser.RULE_reservedKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReservedKeyword" ):
                listener.enterReservedKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReservedKeyword" ):
                listener.exitReservedKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReservedKeyword" ):
                return visitor.visitReservedKeyword(self)
            else:
                return visitor.visitChildren(self)




    def reservedKeyword(self):

        localctx = CWScriptParser.ReservedKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_reservedKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 26368951713792) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(CWScriptParser.Ident, 0)

        def reservedKeyword(self):
            return self.getTypedRuleContext(CWScriptParser.ReservedKeywordContext,0)


        def getRuleIndex(self):
            return CWScriptParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = CWScriptParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ident)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(CWScriptParser.Ident)
                pass
            elif token in [31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.reservedKeyword()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(CWScriptParser.STATE, 0)

        def LBRACE(self):
            return self.getToken(CWScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CWScriptParser.RBRACE, 0)

        def stateItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.StateItemContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.StateItemContext,i)


        def getRuleIndex(self):
            return CWScriptParser.RULE_stateBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateBlock" ):
                listener.enterStateBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateBlock" ):
                listener.exitStateBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateBlock" ):
                return visitor.visitStateBlock(self)
            else:
                return visitor.visitChildren(self)




    def stateBlock(self):

        localctx = CWScriptParser.StateBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stateBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(CWScriptParser.STATE)
            self.state = 98
            self.match(CWScriptParser.LBRACE)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99
                self.stateItem()
                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1152268858556416) != 0)):
                    break

            self.state = 104
            self.match(CWScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemDefn(self):
            return self.getTypedRuleContext(CWScriptParser.ItemDefnContext,0)


        def mapDefn(self):
            return self.getTypedRuleContext(CWScriptParser.MapDefnContext,0)


        def getRuleIndex(self):
            return CWScriptParser.RULE_stateItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateItem" ):
                listener.enterStateItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateItem" ):
                listener.exitStateItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateItem" ):
                return visitor.visitStateItem(self)
            else:
                return visitor.visitChildren(self)




    def stateItem(self):

        localctx = CWScriptParser.StateItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stateItem)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.itemDefn()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.mapDefn()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemDefnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.key = None # IdentContext
            self.ty = None # TypeExprContext

        def COLON(self):
            return self.getToken(CWScriptParser.COLON, 0)

        def ident(self):
            return self.getTypedRuleContext(CWScriptParser.IdentContext,0)


        def typeExpr(self):
            return self.getTypedRuleContext(CWScriptParser.TypeExprContext,0)


        def getRuleIndex(self):
            return CWScriptParser.RULE_itemDefn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItemDefn" ):
                listener.enterItemDefn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItemDefn" ):
                listener.exitItemDefn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemDefn" ):
                return visitor.visitItemDefn(self)
            else:
                return visitor.visitChildren(self)




    def itemDefn(self):

        localctx = CWScriptParser.ItemDefnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_itemDefn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            localctx.key = self.ident()
            self.state = 111
            self.match(CWScriptParser.COLON)
            self.state = 112
            localctx.ty = self.typeExpr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapDefnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prefix = None # IdentContext
            self.key = None # TypeExprContext
            self.ty = None # TypeExprContext

        def LBRACK(self):
            return self.getToken(CWScriptParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(CWScriptParser.RBRACK, 0)

        def COLON(self):
            return self.getToken(CWScriptParser.COLON, 0)

        def ident(self):
            return self.getTypedRuleContext(CWScriptParser.IdentContext,0)


        def typeExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.TypeExprContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.TypeExprContext,i)


        def getRuleIndex(self):
            return CWScriptParser.RULE_mapDefn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapDefn" ):
                listener.enterMapDefn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapDefn" ):
                listener.exitMapDefn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapDefn" ):
                return visitor.visitMapDefn(self)
            else:
                return visitor.visitChildren(self)




    def mapDefn(self):

        localctx = CWScriptParser.MapDefnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mapDefn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            localctx.prefix = self.ident()
            self.state = 115
            self.match(CWScriptParser.LBRACK)
            self.state = 116
            localctx.key = self.typeExpr(0)
            self.state = 117
            self.match(CWScriptParser.RBRACK)
            self.state = 118
            self.match(CWScriptParser.COLON)
            self.state = 119
            localctx.ty = self.typeExpr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CWScriptParser.RULE_typeExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TupleTContext(TypeExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CWScriptParser.TypeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(CWScriptParser.LPAREN, 0)
        def typeExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.TypeExprContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.TypeExprContext,i)

        def RPAREN(self):
            return self.getToken(CWScriptParser.RPAREN, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CWScriptParser.COMMA)
            else:
                return self.getToken(CWScriptParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTupleT" ):
                listener.enterTupleT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTupleT" ):
                listener.exitTupleT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTupleT" ):
                return visitor.visitTupleT(self)
            else:
                return visitor.visitChildren(self)


    class ParamzdTContext(TypeExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CWScriptParser.TypeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWScriptParser.TypeExprContext)
            else:
                return self.getTypedRuleContext(CWScriptParser.TypeExprContext,i)

        def LT(self):
            return self.getToken(CWScriptParser.LT, 0)
        def GT(self):
            return self.getToken(CWScriptParser.GT, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CWScriptParser.COMMA)
            else:
                return self.getToken(CWScriptParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamzdT" ):
                listener.enterParamzdT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamzdT" ):
                listener.exitParamzdT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamzdT" ):
                return visitor.visitParamzdT(self)
            else:
                return visitor.visitChildren(self)


    class OptionTContext(TypeExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CWScriptParser.TypeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeExpr(self):
            return self.getTypedRuleContext(CWScriptParser.TypeExprContext,0)

        def QUESTION(self):
            return self.getToken(CWScriptParser.QUESTION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionT" ):
                listener.enterOptionT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionT" ):
                listener.exitOptionT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionT" ):
                return visitor.visitOptionT(self)
            else:
                return visitor.visitChildren(self)


    class IdentTContext(TypeExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CWScriptParser.TypeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(CWScriptParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentT" ):
                listener.enterIdentT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentT" ):
                listener.exitIdentT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentT" ):
                return visitor.visitIdentT(self)
            else:
                return visitor.visitChildren(self)


    class ListTContext(TypeExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CWScriptParser.TypeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeExpr(self):
            return self.getTypedRuleContext(CWScriptParser.TypeExprContext,0)

        def LBRACK(self):
            return self.getToken(CWScriptParser.LBRACK, 0)
        def NumLiteral(self):
            return self.getToken(CWScriptParser.NumLiteral, 0)
        def RBRACK(self):
            return self.getToken(CWScriptParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListT" ):
                listener.enterListT(self)
